# shabeai

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .vercel-deploy-trigger  .vercelignore  CONTRIBUTING.md  Makefile  README.md  app.py  check_tables.py  dashboard.py  dev.ps1  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  register_user.py  test.db  tsconfig.app.json  tsconfig.json  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot.yml  deploy.yml
.streamlit/: config.toml
app/: __init__.py  audit.py  auth.py  chat_router.py  commands.py  database.py  db.py  logic.py  main.py  models.py  nl_router.py  reports.py  schemas.py  text.py  utils.py
backend/: .coverage  Dockerfile  Dockerfile.dev  LOGGING.md  alembic.ini  coverage.xml  debug_db.py  init_db.py  mypy.ini  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  register_demo_user.py  requirements.txt  setup_demo.py  test_api.py  test_server.py  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 632c0960b198_initial_migration.py  e499d77abd9b_sync_models.py
backend/app/: __init__.py  auth.py  chat_router.py  database.py  deps.py  logging_config.py  main.py  models.py  simple_auth.py
backend/app/middleware/: request_id.py
backend/app/routers/: auth.py  company.py  deal.py  lead.py  meta.py  task.py
backend/app/schemas/: company.py  deal.py  lead.py  task.py
backend/app/services/: company_service.py  deal_service.py  lead_service.py  task_service.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20250623180924_init/: migration.sql
backend/tests/: conftest.py  test_api.py  test_auth.py  test_company_service.py  test_deal_service.py  test_deps.py  test_lead_service.py  test_meta.py  test_simple_auth.py  test_task_service.py
backend/tests/api/: test_auth.py  test_companies.py  test_deals.py  test_leads.py  test_meta.py  test_tasks.py
convex/: schema.ts
convex/_generated/: api.d.ts
convex/billing/: actions.ts  queries.ts
convex/leads/: queries.ts
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  cypress.config.ts  middleware.ts  next.config.ts  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/__tests__/: CompanyTypeahead.test.tsx  leadSort.test.ts  middleware.test.tsx
frontend/app/api/billing/status/: route.ts
frontend/app/api/stripe/webhook/: route.ts
frontend/app/billing/: BillingPageImpl.tsx  layout.tsx  page.tsx
frontend/components/: CheckoutButton.tsx
frontend/convex/: companies.ts  convex.json  schema.ts
frontend/convex/_generated/: api.d.ts
frontend/convex/billing/: actions.ts  queries.ts
frontend/cypress/e2e/: login.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/public/: desktop.ini
frontend/src/__tests__/: leads-smoke.test.tsx  login-error.test.tsx  login-smoke.test.tsx  setupTests.ts
frontend/src/__tests__/mocks/: server.ts
frontend/src/app/: QueryProvider.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(providers)/: react-query.tsx
frontend/src/app/(secure)/: layout.tsx
frontend/src/app/(secure)/dashboard/: layout.tsx  page.tsx
frontend/src/app/(secure)/dashboard/chat/: page.tsx
frontend/src/app/(secure)/dashboard/home/: page.tsx
frontend/src/app/(secure)/dashboard/pipeline/: page.tsx
frontend/src/app/(secure)/dashboard/settings/: page.tsx
frontend/src/app/(secure)/dashboard/tasks/: page.tsx
frontend/src/app/(secure)/leads/: page.tsx
frontend/src/app/api/stripe/webhook/: route.ts
frontend/src/app/billing/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/__tests__/: debug.test.tsx  nav-smoke.test.tsx  smoke.test.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/leads/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/rq-test/: page.tsx
frontend/src/app/ui/: card.tsx
frontend/src/components/: AvatarMenu.tsx  CheckoutButton.tsx  CompanyTypeahead.tsx  LeadCreateForm.tsx  LeadList.tsx  LeadStatusPill.tsx  LoginForm.tsx  ProtectedRoute.tsx  Providers.tsx  ReactQueryProvider.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: card.tsx  dropdown-menu.tsx
frontend/src/hooks/: useBilling.ts  useChat.ts  useCompanies.ts  useCurrentUser.ts  useDeals.ts  useLeads.ts  useTasks.ts
frontend/src/lib/: api.ts  auth.ts  convex.ts  convex.tsx  http.ts  streamClient.ts  utils.ts
frontend/src/styles/: tokens.css
frontend/src/tests/: login-error.test.tsx  login-success.test.tsx
src/: App.tsx
src/components/: CompanyTypeahead.tsx  LeadCreateForm.tsx
src/components/ui/: provider.tsx
styles/: tokens.css
tests/: .coverage  conftest.py  factories.py
tests/api/: test_basic.py  test_companies.py  test_leads.py
tests/integration/: test_auth_api.py  test_chat_flow.py
tests/unit/: test_handle_commands.py  test_handle_delete.py  test_logic.py
