[project]
name = "shabeai"
version = "0.1.0"
description = ""
authors = [
    {name = "Vigeash Gohbal",email = "vigeash11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "fastapi-users-db-sqlmodel (>=0.3.0,<0.4.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "openai (>=1.25)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]
